--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="share_template">
         Hey, check out this awesome restaurant I found on Instafood!\n\nName: %1$s\nRating: %2$s\nAddress: %3$s\nFood type: %4$s\nPhone number: %5$s\n\n%6$s
     </string>
+
+    <string name="open_until">Open until %s</string>
+    <string name="closing_at">Closing at %s</string>
 </resources>
