--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
 
     <string name="open_until">Open until %s</string>
     <string name="closing_at">Closing at %s</string>
+    <string name="closing_time_unavailable">Closing time unavailable</string>
 </resources>
