--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="open_until">Open until %s</string>
     <string name="closing_at">Closes at %s</string>
     <string name="closing_time_unavailable">Closing time unavailable</string>
+    <string name="open_24_hours">Open 24 hours</string>
 </resources>
