Add navigate button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="what_others_saying"><u>What People Are Saying</u></string>
     <string name="no_reviews">There are no reviews attached to this restaurant.</string>
 
+    <string name="navigate">Navigate</string>
     <string name="call">Call</string>
     <string name="share">Share</string>
     <string name="choose">Choose</string>
