--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,12 @@
     <string name="navigate_with">Navigate with</string>
     <string name="call_with">Call with</string>
 
-    <string name="photos"><u>Photos</u></string>
+    <string name="photos">Photos</string>
     <string name="no_photos">There are no photos attached to this restaurant.</string>
-    <string name="what_others_saying"><u>What People Are Saying</u></string>
+    <string name="what_others_saying">What People Are Saying</string>
     <string name="no_reviews">There are no reviews attached to this restaurant.</string>
 
-    <string name="additional_information"><u>Additional Information</u></string>
+    <string name="additional_information">Additional Information</string>
     <string name="does_pickup_takeout">Does Pickup/Take-out</string>
     <string name="delivers">Delivers</string>
     <string name="takes_reservations">Takes Reservations</string>
